# rplmaker

./: .gitignore  Cargo.toml  GUIDE.md  LICENSE  README.md
.github/workflows/: build.yml
Scripts/: rplMaker capture factory presets.lua
crates/rplmaker-cli/: Cargo.toml
crates/rplmaker-cli/src/: main.rs
crates/rplmaker-core/: Cargo.toml
crates/rplmaker-core/src/: blob.rs  convert.rs  edit.rs  extract.rs  files.rs  json.rs  lib.rs  rpl.rs  treemerge.rs  uapreset.rs  ubjson.rs  valuetree.rs  xmlmerge.rs  xmlread.rs
crates/rplmaker-core/tests/: examples.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html  main.js
