[package]
name = "rplmaker-cli"
description = "Command-line converter from plugin preset files to REAPER RPL preset libraries"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rplmaker"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rplmaker-core = { path = "../rplmaker-core" }
